Add two more recipes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Home Made Lasagna!</a></li>
+        <li><a href="recipes/panettone.html">Delicious Panettone</a></li>
+        <li><a href="recipes/casserole.html">Crab Brunch Casserole</a></li>
+    </ul>
     </ul>
 </body>
 </html>
